# ai-platform-governance

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/: dependabot.yml
infra/: data.tf  main.apim.tf  (+18 more)
services/governance-api/: Dockerfile  pyproject.toml
services/governance-api/policy_sources/: .gitkeep
services/governance-api/src/governance_api/: __init__.py  auth.py  main.py
services/governance-api/src/governance_api/events/: schemas.py
services/governance-api/src/governance_api/models/: __init__.py  approval.py  cost.py  decision.py  enterprise_policy.py  incident.py  policy.py  remediation.py  telemetry.py  workflow.py
services/governance-api/src/governance_api/routers/: __init__.py  agents.py  approvals.py  compliance.py  costs.py  events.py  health.py  incidents.py  policies.py  workflows.py
services/governance-api/src/governance_api/services/: __init__.py  agent_suspension.py  approval_service.py  cost_aggregator.py  decision_engine.py  event_bus.py  orchestration_service.py  policy_engine.py  policy_registry.py  schema_normalizer.py  telemetry_query.py
services/governance-api/src/governance_api/telemetry/: __init__.py
services/governance-api/tests/: __init__.py  conftest.py  test_agents.py  test_approvals.py  test_auth.py  test_compliance.py  test_costs.py  test_events.py  test_health.py  test_incidents.py  test_policies.py  test_policy_registry.py  test_tc10_agent_suspension.py  test_tc11_event_stream.py  test_tc13_audit_bundle.py  test_tc2_enforcement.py  test_tc5_escalation.py  test_tc8_remediation_options.py  test_workflows.py
(+9 files in other folders)
